Uodated Documentation for api
